[tool.poetry]
name = "mtlockyer"
version = "0.1.0"
description = "Simple web site checker and notifier"
authors = ["Tom Marshall <tom.q.marshall@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.22.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
