[tool.poetry]
name = "mtlockyer"
version = "0.1.0"
description = "Simple web site checker and notifier"
authors = ["Tom Marshall <tom.q.marshall@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.22.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
beautifulsoup4 = "^4.12.3"
types-pyyaml = "^6.0.12.20240311"
types-beautifulsoup4 = "^4.12.0.20240511"
boto3 = "^1.34.136"
chromedriver-autoinstaller = "^0.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
